--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.4",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.21.1",
     "tailwindcss": "^3.4.1"
   },
