--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^9.0.4",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.21.1",
+    "redux-persist": "^6.0.0",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
