--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
     "@tanstack/react-query": "^5.17.9",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.5",
+    "country-state-city": "^3.2.1",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.4",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.21.1",
+    "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
